# Aasta

./: .env  .replit  main.py  pyproject.toml
cogs/: combat.py  library.py  misc.py  register.py  spellscog.py  stats.py  ud2.py  weavers.py
databases/: spells.py
functions/: functions.py  log.py  sheetstats.py
functions/important/: client.py  keepalive.py
helpers/d2helpers/: basichelpers.py  buttons.py  changer.py  changererror.py
helpers/genhelp/: embedhelper.py
helpers/libraryhelpers/: embeds.py
helpers/reghelp/: basichelpers.py  buttons.py  reghelper.py
